--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Vue Black Dashboard PRO</title>
+    <title>ТАМАДУМ</title>
     <!-- Bootstrap core CSS     -->
     <meta
       name="viewport"
